# software_construction_3_composite_pattern

./: CMakeLists.txt  README.md
header/: add.hpp  add_test.hpp  base.hpp  div.hpp  div_test.hpp  mult.hpp  mult_test.hpp  op.hpp  op_test.hpp  pow.hpp  pow_test.hpp  rand.hpp  rand_test.hpp  sub.hpp  sub_test.hpp
src/: main.cpp  unit_tests.cpp
